--- a/src/App/Client/GoldEx.Client/Pages/Customers/Components/Editor.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Customers/Components/Editor.razor
@@ -34,7 +34,9 @@
                                   Margin="Margin.Dense"
                                   Variant="Variant.Outlined" />
                 </MudItem>
-                <MudItem xs="6" md="3" lg="3">
+                <MudItem xs="12" md="6" lg="6">
+                    <MudMenu @bind-Open="_isCreditLimitMenuOpen" ActivationEvent="@MouseEvent.RightClick" Class="w-100">
+                    <ActivatorContent>
                     <MudNumericField HelperText="@_creditLimitHelperText"
                                      Value="Model.CreditLimit"
                                      ValueChanged="OnCreditLimitChanged"
@@ -45,22 +47,18 @@
                                      For="@(() => Model.CreditLimit)"
                                      Label="سقف اعتبار"
                                      Margin="Margin.Dense"
-                                     Variant="Variant.Outlined" />
-                </MudItem>
-                <MudItem xs="6" md="3" lg="3">
-                    <MudSelect T="UnitType?"
-                               Value="Model.CreditLimitUnit"
-                               ValueChanged="OnCreditLimitUnitChanged"
-                               Label="واحد"
-                               For="() => Model.CreditLimitUnit"
-                               Margin="Margin.Dense"
-                               Variant="Variant.Outlined">
-                        <MudSelectItem T="UnitType?" Value="@((UnitType?)null)">-</MudSelectItem>
+                                     Variant="Variant.Outlined" 
+                                     Adornment="Adornment.End"
+                                     AdornmentIcon="@Icons.Material.Filled.UnfoldMore"
+                                     OnAdornmentClick="() => _isCreditLimitMenuOpen = true"/>
+                    </ActivatorContent>
+                    <ChildContent>
                         @foreach (var item in Enum.GetValues<UnitType>())
                         {
-                            <MudSelectItem Value="@((UnitType?)item)">@item.GetDisplayName()</MudSelectItem>
+                            <MudMenuItem OnClick="() => SelectCreditLimitUnit(item)">@item.GetDisplayName()</MudMenuItem>
                         }
-                    </MudSelect>
+                    </ChildContent>
+                    </MudMenu>
                 </MudItem>
                 <MudItem xs="12">
                     <MudTextField @bind-Value="Model.Address"
