--- a/src/App/Client/GoldEx.Client/Pages/Settings/Shared/SettingsNavMenu.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Settings/Shared/SettingsNavMenu.razor
@@ -2,4 +2,5 @@
     <MudNavLink Href="@ClientRoutes.Settings.Index" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.DisplaySettings">اطلاعات پایه</MudNavLink>
     <MudNavLink Href="@ClientRoutes.ProductCategories.Index" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Category">دسته بندی اجناس</MudNavLink>
     <MudNavLink Href="@ClientRoutes.Settings.PriceSettings" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.EuroSymbol">مدیریت نمادها</MudNavLink>
+    <MudNavLink Href="@ClientRoutes.Settings.PriceUnits" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.CurrencyExchange">مدیریت واحدهای ارزی</MudNavLink>
 </MudNavMenu>
