--- a/src/App/Client/GoldEx.Client/Pages/Transactions/Components/TransactionsList.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Transactions/Components/TransactionsList.razor
@@ -24,7 +24,7 @@
         <MudTh><MudTableSortLabel SortLabel="Customer.NationalId" T="TransactionVm">شناسه یکتا</MudTableSortLabel></MudTh>
         <MudTh><MudTableSortLabel SortLabel="Credit" T="TransactionVm">بستانکاری</MudTableSortLabel></MudTh>
         <MudTh><MudTableSortLabel SortLabel="Debit" T="TransactionVm">بدهکاری</MudTableSortLabel></MudTh>
-        <MudTh>مانده</MudTh>
+        @* <MudTh>مانده</MudTh> *@
         <MudTh><MudTableSortLabel SortLabel="DateTime" T="TransactionVm">تاریخ</MudTableSortLabel></MudTh>
         <MudTh>عملیات</MudTh>
     </HeaderContent>
@@ -35,7 +35,7 @@
         <MudTd DataLabel="شناسه یکتای مشتری">@context.CustomerNationalId</MudTd>
         <MudTd DataLabel="بستانکاری">@(context.Credit.HasValue ? $"{context.Credit:N0} {context.CreditUnit}" : "-")</MudTd>
         <MudTd DataLabel="بدهکاری">@(context.Debit.HasValue ? $"{context.Debit:N0} {context.DebitUnit}" : "-")</MudTd>
-        <MudTd DataLabel="مانده">@($"{context.Remaining:N0} {context.RemainingUnit}")</MudTd>
+        @* <MudTd DataLabel="مانده">@($"{context.Remaining:N0} {context.RemainingUnit}")</MudTd> *@
         <MudTd DataLabel="تاریخ">@context.DateTime.ToString(CultureInfo.CurrentCulture)</MudTd>
         <MudTd DataLabel="عملیات">
             <div class="d-flex gap-2">
