Fix dialog exceptions caused closing dialog

--- a/src/App/Client/GoldEx.Client/Pages/Settings/Components/Categories/Editor.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Settings/Components/Categories/Editor.razor
@@ -23,11 +23,11 @@
 
             <MudButton Class="m-2"
                        Color="Color.Primary"
-                       Disabled="@_processing"
+                       Disabled="@IsBusy"
                        StartIcon="@Icons.Material.Filled.Save"
                        OnClick="@(async () => await Submit())"
                        Variant="Variant.Filled">
-                @if (_processing)
+                @if (IsBusy)
                 {
                     <MudProgressCircular Class="ms-n1"
                                          Size="Size.Small"
