--- a/src/App/Client/GoldEx.Client/Pages/Customers/Components/Remove.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Customers/Components/Remove.razor
@@ -9,10 +9,10 @@
         <MudButton Class="m-3"
                    StartIcon="@Icons.Material.Filled.Delete"
                    Color="Color.Error"
-                   Disabled="@_processing"
+                   Disabled="@IsBusy"
                    OnClick="@(async () => await OnValidSubmit())"
                    Variant="Variant.Filled">
-            @if (_processing)
+            @if (IsBusy)
             {
                 <MudProgressCircular Class="ms-n1"
                                      Size="Size.Small"
