--- a/src/App/Client/GoldEx.Client/Pages/Settings/Shared/SettingsNavMenu.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Settings/Shared/SettingsNavMenu.razor
@@ -3,4 +3,5 @@
     <MudNavLink Href="@ClientRoutes.ProductCategories.Index" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Category">دسته بندی اجناس</MudNavLink>
     <MudNavLink Href="@ClientRoutes.Settings.PriceSettings" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.EuroSymbol">مدیریت نمادها</MudNavLink>
     <MudNavLink Href="@ClientRoutes.Settings.PriceUnits" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.CurrencyExchange">مدیریت واحدهای ارزی</MudNavLink>
+    <MudNavLink Href="@ClientRoutes.Settings.PaymentMethods" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Payment">مدیریت روش های پرداخت</MudNavLink>
 </MudNavMenu>
